updated css files

--- a/about.html
+++ b/about.html
@@ -7,24 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>About</title>
 </head>
-<style>
-    .card-header {
-        background-color: white;
-        text-emphasis-color: white;
-    }
-
-    .card-body {
-        background-color: palevioletred;
-    }
-
-    body {
-        background-image: url("file:///Users/danmitchell/Downloads/background_with_breast_cancer_awareness_pink_ribbons3-.jpg");
-        height: 900px;
-
-    }
-</style>
 
 <body>
 
