--- a/maps.html
+++ b/maps.html
@@ -7,15 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>maps</title>
-    <style>
-        body {
-            background-image: url("file:///Users/danmitchell/Downloads/parade%201.jpg.gallery%20(1).jpg");
-            height: 900px;
-            text-align: center;
-        }
-    </style>
+
 </head>
 
 <div class="card text-center">
