--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="container">
         <div class="col-md-12 col-md-6">
-            <img src="file:///Users/danmitchell/Downloads/pink-breast-cancer-awareness-shirts-hd-2nd-annual-race-for-the-pink-ribbon-wilmington-north-delawhere-photography.jpg"
+            <img src="assets/images/index_background.png"
                 alt="pic" />
             <h1 class="tag">
                 <p class="quote">
