--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <title>About</title>
 </head>
 
-<body>
+<body class="about-page">
 
     <div class="card text-center">
         <div class="card-header">
