--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <title>Contact</title>
 </head>
 
-<body>
+<body class="contact-page">
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
@@ -34,7 +34,7 @@
     </div>
     <br>
     <form action="/action_page.php">
-        <div class="container">
+        <div class="contact-page-container">
             <h1>Register</h1>
             <p>Please fill in this form to create an account.</p>
             <hr>
