--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <title>Home</title>
 </head>
 
-
-<body>
+<body class="index-page">
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
@@ -35,9 +34,9 @@
     </div>
     <br>
 
-    <div class="container">
+    <div class="index-container">
         <div class="col-md-12 col-md-6">
-            <img src="assets/images/index_background.png"
+            <img src="assets/images/home_join-fight.png"
                 alt="pic" />
             <h1 class="tag">
                 <p class="quote">
