--- a/maps.html
+++ b/maps.html
@@ -13,64 +13,54 @@
 
 </head>
 
-<div class="card text-center">
-    <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="maps.html">Maps</a>
-            </li>
-        </ul>
-    </div>
-</div>
-<br>
-<div class="container">
-    <P class="text-center">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut facere
-            asperiores veritatis error qui dolorum repudiandae iusto modi assumenda. Modi ipsum laborum ab cum.</p>
-        <br>
-        <div class="image">
-            =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-    </P>
+<body class="map">
 
+    <div class="card text-center">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="maps.html">Maps</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <br>
-    <div class="text-center">
-        <div class="content">
-            <h3>My Google Maps Demo Api Needed</h3>
-            <!--The div element for the map -->
-            <div id="map"></div>
+    <div class="container">
+        <P class="text-center">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut
+                facere
+                asperiores veritatis error qui dolorum repudiandae iusto modi assumenda. Modi ipsum laborum ab cum.</p>
             <br>
+            <div class="image">
+                =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </P>
 
-            <h3>My Yelp Demo Api Needed</h3>
-            <!-- The div element for the Yelp -->
-            <div id="yelp"></div>
+        <br>
+        <div class="text-center">
+            <div class="content">
+                <h3>My Google Maps Demo Api Needed</h3>
+                <!--The div element for the map -->
+                <div id="map"></div>
+                <br>
+
+                <h3>My Yelp Demo Api Needed</h3>
+                <!-- The div element for the Yelp -->
+                <div id="yelp"></div>
+            </div>
         </div>
     </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-<body>
 
 </body>
 
