--- a/about.html
+++ b/about.html
@@ -7,35 +7,21 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>About</title>
 </head>
-<style>
-    .card-header {
-        background-color: white;
-        text-emphasis-color: white;
-    }
 
-    .card-body {
-        background-color: palevioletred;
-    }
-
-    body {
-        background-image: url("file:///Users/danmitchell/Downloads/background_with_breast_cancer_awareness_pink_ribbons3-.jpg");
-        height: 900px;
-
-    }
-</style>
-
-<body>
+<body class="about-page">
 
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -51,10 +37,9 @@
     <div class="container">
         <div class="card-body">
             <div class="text-center">
-                <img src="file:///Users/danmitchell/Downloads/head-scarves.jpg" alt="pic" class="center" />
+                <img src="../Real-project/assets/images/about_head-scarves.png" alt="pic" class="center" />
                 <br>
-                <img src="file:///Users/danmitchell/Downloads/tougher-than-cancer-pink-ribbon-awareness-t-shirt-in-25-colors-19.jpg"
-                    alt="pic" class="center" />
+                <img src="../Real-project/assets/images/about_tougher.png" alt="pic" class="center" />
             </div>
         </div>
         <br>
