--- a/index.html
+++ b/index.html
@@ -7,130 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
     <title>Home</title>
 </head>
-<style>
-    @media screen and (max-width:959px) {
-        .container {
-            width: 100%;
-        }
 
-        .jumbotron {
-            width: 100%;
-        }
+<body class="index-page">
 
-    }
-
-    @media screen and (max-width:640px) {
-        .container .quote {
-            width: 100%;
-        }
-
-        .pic {
-            width: 100%;
-        }
-
-        .container .btn {
-            width: 100%;
-        }
-
-        .facts {
-            text-align: center;
-        }
-    }
-
-    .facts {
-        text-align: center;
-
-
-    }
-
-
-
-
-    body {
-
-        background-image: url("file:///Users/danmitchell/Downloads/parade%201.jpg.gallery%20(1).jpg");
-    }
-
-    .jumbotron {
-        background-color: white;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-        -webkit-text-fill-color: pink;
-    }
-
-    .container .quote {
-        position: absolute;
-        top: 20%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        color: palevioletred;
-        font-size: 16px;
-        padding: 12px 24px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        text-align: center;
-
-    }
-
-
-    .container .btn {
-        position: absolute;
-        top: 75%;
-        left: 75%;
-        transform: translate(-50%, -50%);
-        -ms-transform: translate(-50%, -50%);
-        background-color: palevioletred;
-        color: white;
-        font-size: 16px;
-        padding: 12px 24px;
-        border: none;
-        cursor: pointer;
-        border-radius: 5px;
-        text-align: center;
-    }
-
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-        position: relative;
-    }
-
-    .topnav #myLinks {
-        display: none;
-    }
-
-    .topnav a {
-        color: white;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-        display: block;
-    }
-
-    .topnav a.icon {
-        background: white;
-        display: block;
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-
-    .active {
-        background-color: palevioletred;
-        color: white;
-    }
-</style>
-
-<body>
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
@@ -146,16 +30,13 @@
                 <li class="nav-item">
                     <a class="nav-link" href="maps.html">Maps</a>
                 </li>
-
             </ul>
         </div>
     </div>
-    <br>
 
-    <div class="container">
+    <div class="index-container">
         <div class="col-md-12 col-md-6">
-            <img src="file:///Users/danmitchell/Downloads/pink-breast-cancer-awareness-shirts-hd-2nd-annual-race-for-the-pink-ribbon-wilmington-north-delawhere-photography.jpg"
-                alt="pic" />
+            <img src="assets/images/home_join-fight.png" alt="pic" />
             <h1 class="tag">
                 <p class="quote">
                     " Everyone Knows Someone & They Should Never Wonder If there Beautiful "
