--- a/maps.html
+++ b/maps.html
@@ -7,75 +7,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
     <title>maps</title>
-    <style>
-        body {
-            background-image: url("file:///Users/danmitchell/Downloads/parade%201.jpg.gallery%20(1).jpg");
-            height: 900px;
-            text-align: center;
-        }
-    </style>
+
 </head>
 
-<div class="card text-center">
-    <div class="card-header">
-        <ul class="nav nav-tabs card-header-tabs">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="maps.html">Maps</a>
-            </li>
-        </ul>
-    </div>
-</div>
-<br>
-<div class="container">
-    <P class="text-center">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut facere
-            asperiores veritatis error qui dolorum repudiandae iusto modi assumenda. Modi ipsum laborum ab cum.</p>
-        <br>
-        <div class="image">
-            =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-    </P>
+<body class="map">
 
+    <div class="card text-center">
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="maps.html">Maps</a>
+                </li>
+            </ul>
+        </div>
+    </div>
     <br>
-    <div class="text-center">
-        <div class="content">
-            <h3>My Google Maps Demo Api Needed</h3>
-            <!--The div element for the map -->
-            <div id="map"></div>
+    <div class="container">
+        <P class="text-center">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut
+                facere
+                asperiores veritatis error qui dolorum repudiandae iusto modi assumenda. Modi ipsum laborum ab cum.</p>
             <br>
+            <div class="image">
+                =<iframe width="760" height="560" src="https://www.youtube.com/embed/yvnglnhESZc" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </P>
 
-            <h3>My Yelp Demo Api Needed</h3>
-            <!-- The div element for the Yelp -->
-            <div id="yelp"></div>
+        <br>
+        <div class="text-center">
+            <div class="content">
+                <h3>My Google Maps Demo Api Needed</h3>
+                <!--The div element for the map -->
+                <div id="map"></div>
+                <br>
+
+                <h3>My Yelp Demo Api Needed</h3>
+                <!-- The div element for the Yelp -->
+                <div id="yelp"></div>
+            </div>
         </div>
     </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-<body>
 
 </body>
 
