spelling change index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 alt="pic" />
             <h1 class="tag">
                 <p class="quote">
-                    " Everyone Knows Someone & They Should Never Wonder If there Beautiful "
+                    " Everyone Knows Someone & They Should Never Wonder If They Are Beautiful "
                 </p>
             </h1>
 
