--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
     <title>Home</title>
 </head>
 
 <body class="index-page">
+
+    <!-- Navbar -->
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
@@ -32,7 +35,6 @@
             </ul>
         </div>
     </div>
-    <br>
 
     <div class="index-container">
         <div class="col-md-12 col-md-6">
