--- a/maps.html
+++ b/maps.html
@@ -9,17 +9,19 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Just+Another+Hand" rel="stylesheet">
     <title>maps</title>
 
 </head>
 
 <body class="map">
-
+    
+    <!-- Navbar -->
     <div class="card text-center">
         <div class="card-header">
             <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item">
-                    <a class="nav-link active" href="index.html">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
@@ -28,12 +30,12 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="maps.html">Maps</a>
+                    <a class="nav-link active" href="maps.html">Maps</a>
                 </li>
             </ul>
         </div>
     </div>
-    <br>
+    
     <div class="container">
         <P class="text-center">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut
