--- a/about.html
+++ b/about.html
@@ -13,38 +13,34 @@
     <title>About</title>
 </head>
 
-<body class="about-page">
+<body>
 
     <!-- Navbar -->
-    <div class="card text-center">
-        <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="maps.html">Maps</a>
-                </li>
-            </ul>
-        </div>
+    <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="maps.html">Maps</a>
+            </li>
+        </ul>
     </div>
 
-    <div class="container">
+    <div class="container_about">
         <div class="card-body">
-            <div class="text-center">
                 <img src="../Real-project/assets/images/about_head-scarves.png" alt="pic" class="center" />
                 <br>
                 <img src="../Real-project/assets/images/about_tougher.png" alt="pic" class="center" />
-            </div>
         </div>
         <br>
-        <p class="text-center">
+        <p class="about">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum delectus quas qui officiis, saepe,
             voluptates suscipit nemo recusandae doloribus rem nostrum voluptas ipsam commodi, temporibus
             accusantium iste cum excepturi? Quam!
