--- a/maps.html
+++ b/maps.html
@@ -13,29 +13,27 @@
     <title>maps</title>
 </head>
 
-<body class="map">
-    
-     <!-- Navbar -->
-     <div class="card text-center">
-            <div class="card-header">
-                <ul class="nav nav-tabs card-header-tabs">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="maps.html">Maps</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    
-    <div class="container">
+<body>
+
+    <!-- Navbar -->
+    <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="maps.html">Maps</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="container_map">
         <P class="text-center">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum, eius vero. Ex, adipisci eum? Ut
                 facere
