--- a/contact.html
+++ b/contact.html
@@ -13,32 +13,31 @@
     <title>Contact</title>
 </head>
 
-<body class="contact-page">
+<body>
 
     <!-- Navbar -->
-    <div class="card text-center">
-        <div class="card-header">
-            <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="maps.html">Maps</a>
-                </li>
-            </ul>
-        </div>
+    <div class="card-header">
+        <ul class="nav nav-tabs card-header-tabs">
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="contact.html">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="maps.html">Maps</a>
+            </li>
+        </ul>
     </div>
 
-    <form action="/action_page.php">
-        <div class="contact-page-container">
+    <form>
+        <div class="container_contact">
             <h1>Register</h1>
             <p>Please fill in this form to create an account.</p>
+
             <hr>
 
             <label for="email"><b>Email</b></label>
@@ -49,16 +48,17 @@
 
             <label for="psw-repeat"><b>Repeat Password</b></label>
             <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+
             <hr>
+
             <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
             <button type="submit" class="registerbtn">Register</button>
         </div>
 
-        <div class="container signin">
-
+        <div class="container_signin">
             <p>
-               Already have an account? <a href="#">Sign in</a>.
+            Already have an account? <a href="#">Sign in</a>.
             </p>
         </div>
     </form>
