--- a/maps.html
+++ b/maps.html
@@ -54,6 +54,24 @@
             <div class="content">
                 <h3>My Google Maps Demo Api Needed</h3>
                 <!--The div element for the map -->
+                <div id="yelpsearch">
+                </div>
+                <!-- (yelp--->
+                <div class="col-md-9" id="yelp-results"></div>
+                <!-- searchForm -->
+                <div class="col-md-3">
+                    <form action="" id="yelp-form">
+                        <label for="search-input">Add your own animal. </label>
+                        <input type="text" id="search-input">
+                        </br>
+                        <input id="add-query" type="submit" value="Submit" class="submitButton">
+                    </form>
+                    <br>
+                </div>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+                <script type="text/javascript">
+
+                </script>
                 <div id="map"></div>
                 <br>
 
