--- a/about.html
+++ b/about.html
@@ -30,14 +30,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="maps.html">Maps</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="donation.html">Donation</a>
+            </li>
         </ul>
     </div>
 
     <div class="container_about">
         <div class="card-body">
-                <img src="../Real-project/assets/images/about_head-scarves.png" alt="pic" class="center" />
-                <br>
-                <img src="../Real-project/assets/images/about_tougher.png" alt="pic" class="center" />
+            <img src="../Real-project/assets/images/about_head-scarves.png" alt="pic" class="center" />
+            <br>
+            <img src="../Real-project/assets/images/about_tougher.png" alt="pic" class="center" />
         </div>
         <br>
         <p class="about">
