--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="maps.html">Maps</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="donation.html">Donation</a>
+            </li>
         </ul>
     </div>
 
@@ -58,7 +61,7 @@
 
         <div class="container_signin">
             <p>
-            Already have an account? <a href="#">Sign in</a>.
+                Already have an account? <a href="#">Sign in</a>.
             </p>
         </div>
     </form>
