--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
             <li class="nav-item">
                 <a class="nav-link" href="maps.html">Maps</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="donation.html">Donation</a>
+            </li>
         </ul>
     </div>
 
     <div class="index-container">
-      
+
         <div class="row">
             <!-- image -->
             <div class="col-md-6">
