--- a/maps.html
+++ b/maps.html
@@ -30,6 +30,9 @@
             <li class="nav-item">
                 <a class="nav-link active" href="maps.html">Maps</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="donation.html">Donation</a>
+            </li>
         </ul>
     </div>
 
